fix: Add styling to the cards grid and site logo area to it's all aligned

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ button {
   display: flex;
   flex-direction: row;
   height: 5vh;
+  margin-left: 30%;
   width: 15vw;
 }
 
@@ -75,9 +76,13 @@ button {
   width: 2vw;
 }
 
+.site-logo {
+  width: 4vw;
+}
+
 .site-logo-image {
-  height: 13vh;
-  width: 6vw;
+  height: 8vh;
+  width: 4vw;
 }
 
 .cats-view-container {
@@ -100,6 +105,7 @@ button {
   display: flex;
   flex-direction: row;
   height: 45vh;
+  margin-left: 4%;
   margin-top: 3%;
   width: 85vw;
 }
